fixed rest client